log
Thu 09 May 2024 01:08:11 AM UTC: 
 tests:  1|8
total_score: 0/70
2350aef
Thu 09 May 2024 01:12:22 AM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
b7afe49
Thu 09 May 2024 01:13:10 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
6c06279
Thu 09 May 2024 01:15:13 AM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 20/70
94a9d83
Thu 09 May 2024 01:24:29 AM UTC: 
 treemap.c | 41 ++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 40 insertions(+), 1 deletion(-)
 tests:  12|5
total_score: 20/70
bab2b5d
Thu 09 May 2024 01:26:22 AM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  12|5
total_score: 20/70
0992d3b
Thu 09 May 2024 01:28:13 AM UTC: 
 treemap.c | 42 +++++++++++++++---------------------------
 1 file changed, 15 insertions(+), 27 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   63 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a09cd63
Thu 09 May 2024 01:28:53 AM UTC: 
 treemap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 20/70
d3e1002
Thu 09 May 2024 01:30:22 AM UTC: 
 treemap.c | 44 ++++++++++++++++++++++----------------------
 1 file changed, 22 insertions(+), 22 deletions(-)
 tests:  15|4
total_score: 30/70
95cd0b7
Sun 12 May 2024 03:09:49 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  20|3
total_score: 45/70
9716807
Sun 12 May 2024 03:23:38 AM UTC: 
 treemap.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  22|2
total_score: 45/70
e40ac5e
Sun 12 May 2024 03:25:26 AM UTC: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
f18e526
Sun 12 May 2024 03:26:32 AM UTC: 
 treemap.c | 40 ++++++++++++++++++++--------------------
 1 file changed, 20 insertions(+), 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:153:5: error: unknown type name ‘NodoArbol’
  153 |     NodoArbol * aux = arbol->raiz;
      |     ^~~~~~~~~
treemap.c:153:23: error: ‘arbol’ undeclared (first use in this function)
  153 |     NodoArbol * aux = arbol->raiz;
      |                       ^~~~~
treemap.c:153:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:154:5: error: unknown type name ‘NodoArbol’
  154 |     NodoArbol * ultimoVisitado = NULL;
      |     ^~~~~~~~~
treemap.c:159:12: error: implicit declaration of function ‘es_igual’ [-Werror=implicit-function-declaration]
  159 |         if(es_igual(arbol, llave, aux->par->llave)) {
      |            ^~~~~~~~
treemap.c:159:28: error: ‘llave’ undeclared (first use in this function)
  159 |         if(es_igual(arbol, llave, aux->par->llave)) {
      |                            ^~~~~
treemap.c:159:38: error: request for member ‘par’ in something not a structure or union
  159 |         if(es_igual(arbol, llave, aux->par->llave)) {
      |                                      ^~
treemap.c:161:23: error: request for member ‘par’ in something not a structure or union
  161 |             return aux->par;
      |                       ^~
treemap.c:163:44: error: request for member ‘par’ in something not a structure or union
  163 |         else if(arbol->menor_que(llave, aux->par->llave)) {
      |                                            ^~
treemap.c:164:22: error: request for member ‘izquierda’ in something not a structure or union
  164 |             aux = aux->izquierda;
      |                      ^~
treemap.c:167:22: error: request for member ‘derecha’ in something not a structure or union
  167 |             aux = aux->derecha;
      |                      ^~
treemap.c:177:30: error: request for member ‘par’ in something not a structure or union
  177 |         return ultimoVisitado->par;
      |                              ^~
treemap.c:179:1: error: control reaches end of non-void function [-Werror=return-type]
  179 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f91d47c
